# LoggingLibrary

./: .gitignore  CMakeLists.txt  README.md
inc/: ConsoleColors.hpp  FileLogger.hpp  Log.hpp  SeverityLevels.hpp  Utils.hpp
src/: FileLogger.cpp  main.cpp
