cmake_minimum_required(VERSION 3.2)
set(PROJECT_NAME LoggingLibrary)
project(${PROJECT_NAME})
set(CXX_STANDARD 23)
set(CXX_STANDARD_REQUIRED TRUE)
if(WIN32)
	add_compile_options(/Wall /std:c++latest)
else()
	add_compile_options(-Wall -Wpedantic -Werror -std=c++23)
endif()
set(SOURCES_CPP src/FileLogger.cpp src/main.cpp)
add_executable( ${PROJECT_NAME}  ${SOURCES_CPP})
target_include_directories(${PROJECT_NAME} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/inc)
